# outfancy

./: .travis.yml  LICENSE  MANIFEST  README.md  __init__.py  colors.py  config.py  demo.py  index.html  params.json  py-test.py  pyproject.toml  render.py  setup.py  test.py  unitest.py  updater.py  version.py  widgets.py
code_to_use/: SOURCE  aplotter.py
code_to_use/bashplotlib/: commandhelp.py  downloaddata.sh  helpers.py  histogram.py  scatterplot.py
examples/: example.txt
outfancy/: __init__.py  chart.py  colors.py  example_dataset.py  render.py  render_functions.py  table.py  utils.py  version.py  widgets.py  window.py
