[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[options]
package_dir = "outfancy"
packages = ["outfancy"]

[project]
name = "outfancy"
version = "0.7.1"
authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"}
]
description = "Python3.11+ library to print tables and line charts in Terminal."
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
license = {text = "MIT License"}
keywords = ["rendering", "graphical", "terminal", "chart", "graph"]
readme = "README.md"

[project.urls]
repository = "https://github.com/carlosplanchon/outfancy.git"
